brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_array_assignment.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ALL_LLVM_TARGETS=( AArch64 AMDGPU ARM )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("ALL_LLVM_TARGETS"),
                    value: Array([
                      (None, Word(
                        value: "AArch64",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "AMDGPU",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "ARM",
                        loc: "[location]",
                      )),
                    ]),
                    loc: "[location]",
                  ), Word(
                    value: "ALL_LLVM_TARGETS=(AArch64 AMDGPU ARM)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
