brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_array_assignment_multiline.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ALL_LLVM_TARGETS=( AArch64 AMDGPU ARC ARM AVR BPF\n\tLoongArch M68k Mips X86 )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("ALL_LLVM_TARGETS"),
                    value: Array([
                      (None, Word(
                        value: "AArch64",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "AMDGPU",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "ARC",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "ARM",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "AVR",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "BPF",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "LoongArch",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "M68k",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "Mips",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "X86",
                        loc: "[location]",
                      )),
                    ]),
                    loc: "[location]",
                  ), Word(
                    value: "ALL_LLVM_TARGETS=(AArch64 AMDGPU ARC ARM AVR BPF LoongArch M68k Mips X86)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
