brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_array_element_with_trailing_dollar.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "f() { A=( foo$ ); }",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "f",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            prefix: Some(CommandPrefix([
                              AssignmentWord(Assignment(
                                name: VariableName("A"),
                                value: Array([
                                  (None, Word(
                                    value: "foo$",
                                    loc: "[location]",
                                  )),
                                ]),
                                loc: "[location]",
                              ), Word(
                                value: "A=(foo$)",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
