brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_assignment_with_in_keyword_name.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "f() { in=\'/etc/foo\'; }",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "f",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            prefix: Some(CommandPrefix([
                              AssignmentWord(Assignment(
                                name: VariableName("in"),
                                value: Scalar(Word(
                                  value: "\'/etc/foo\'",
                                  loc: "[location]",
                                )),
                                loc: "[location]",
                              ), Word(
                                value: "in=\'/etc/foo\'",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
