brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_comment_no_trailing_newline.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "# hello",
  result: Program(
    complete_commands: [],
  ),
)
