brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_empty_program.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input: \"\", result: &result }"
---
ParseResult(
  input: "",
  result: Program(
    complete_commands: [],
  ),
)
